update copy of add competition button, and ensure responsive width so that the button covers up a greater width of the page

--- a/src/components/AddCompetitionButton/AddCompetitionButton.module.css
+++ b/src/components/AddCompetitionButton/AddCompetitionButton.module.css
@@ -4,7 +4,7 @@
   border-radius: 2.5rem;
   background-color: #92809a;
 
-  @media and (max-width: $mantine-breakpoint-xl) {
-    color: red;
+  @media (max-width: $mantine-breakpoint-lg) {
+    width: 90%;
   }
 }
